# DDS-Security-Lab

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  generate_security_artifacts.sh  graficar_resultados.py  monitor_recursos.sh  payload.cxx  payload.h  payload.idl  payloadPubSubMain.cxx  payloadPubSubTypes.cxx  payloadPubSubTypes.h  payloadPublisher.cxx  payloadPublisher.h  payloadSubscriber.cxx  payloadSubscriber.h  results.ipynb  run_access.sh  run_auth.sh  run_benchmarks.sh  run_benchmarks_sec.sh  run_encrypt.sh  run_none.sh
security/: SecurityConfig.cxx  SecurityConfig.h
security/pki/: ca_key.pem  maincacert.pem  publisher_cert.pem  publisher_key.pem  subscriber_cert.pem  subscriber_key.pem
security/signed/: gov_access.p7s  gov_auth.p7s  gov_encrypt.p7s  permissions_pub.p7s  permissions_sub.p7s
security/xml/: gov_access.xml  gov_auth.xml  gov_encrypt.xml  permissions_pub.xml  permissions_sub.xml
